e1000e: Do not take care about recovery NVM checksum

According to the HW De, integrated GbE sets to read-only after
programming a unique MAC address. The driver should not take care of
NVM checksum updating starting from Tiger Lake.

Bugzilla: https://bugzilla.kernel.org/show_bug.cgi?id=213667
Suggested-by: Dima Ruinskiy <dima.ruinskiy@intel.com>
Suggested-by: Vitaly Lifshits <vitaly.lifshits@intel.com>
Signed-off-by: Sasha Neftin <sasha.neftin@intel.com>